<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidIbeaconTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_monitoring">MonitoringActivity</string>
    <string name="title_activity_ranging">RangingActivity</string>
    <string name="monitor_button_text">Monitor</string>
    <string name="ranging_button_text">Ranging</string>
    <string name="title_activity_register_device">RegisterDevice</string>
    <string name="register_password">Password</string>
    <string name="register_nickname">Nickname</string>
    <string name="my_devices_file">my_devices_file</string>
    <string name="all_seen_devices_file">all_seen_devices_file</string>
    <string name="button_add_text">add</string>
    <string name="title_activity_ranging_marked">RangingMarkedActivity</string>
    <string name="marked_button_text">Marked</string>
    <string name="not_in_range_txt">Device is not in Range</string>
    <string name="action_pause">Pause</string>
    <string name="title_activity_settings">Settings</string>

</resources>
