<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jargetzi.app.RegisterDevice$PlaceholderFragment">

    <TextView
        android:id="@+id/register_device_hash"
        android:text=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/register_device_password"
        android:text="@string/register_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_device_hash"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/register_input_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_device_nickname"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="49dp" />

    <TextView
        android:id="@+id/register_device_nickname"
        android:text="@string/register_nickname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_device_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/register_input_nickname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_device_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_text"
        android:id="@+id/button_add"
        android:layout_below="@+id/register_device_nickname"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
